XSensor/Peloton-20220817/Peloton-20220817/XSCore90.h

// 8 bits
//typedef uint8_t XBOOL;
typedef bool XBOOL;
// 64 bits
typedef uint64_t SENSORPID;
#define NULL nullptr
enum EPressureUnit
{
	ePRESUNIT_MMHG = 0,	// millimeters of mercury
	ePRESUNIT_INH2O,	// inches of water
	ePRESUNIT_PSI,		// pounds/sq.inch
	ePRESUNIT_KPA,		// kilopascals
	ePRESUNIT_KGCM2,	// kgf/cm^2
	ePRESUNIT_ATM,		// atmospheres
	ePRESUNIT_NCM2,		// newtons/cm^2
	ePRESUNIT_MBAR,		// millibars
	ePRESUNIT_NM2,		// Newton/meter^2
	ePRESUNIT_GCM2,		// grams/cm^2
	ePRESUNIT_BAR,		// bar

	ePRESUNIT_RAW = 255
};
/* This Win32 structure is Copyright (c) Microsoft Corp. All rights reserved.
typedef struct _SYSTEMTIME {
	WORD wYear;
	WORD wMonth;
	WORD wDayOfWeek;
	WORD wDay;
	WORD wHour;
	WORD wMinute;
	WORD wSecond;
	WORD wMilliseconds;
} SYSTEMTIME, * PSYSTEMTIME, * LPSYSTEMTIME;
*/


// ===========================================================================
//	Configuration functions
// ===========================================================================

enum EXSErrorCodes
{
	eXS_ERRORCODE_OK,							// Function ran normally

	eXS_ERRORCODE_LIBRARY_NOT_INITIALIZED,		// The DLL library has not been initialized

	eXS_ERRORCODE_BADPARAMETER_OUTOFRANGE,		// a parameter is out of range
	eXS_ERRORCODE_BADPARAMETER_NULL,			// null parameter - pass in a variable/buffers address
	eXS_ERRORCODE_BADPARAMETER_INVALID_SENSOR_PID,	// either the PID is bad, or the sensor was not configured
	eXS_ERRORCODE_BADPARAMETER_BUFFERTOOSMALL,	// the buffer parameter is too small to hold the contents

	eXS_ERRORCODE_CREATEFOLDER_NOPERMISSION,	// the program doesn't have permission to create a folder at the specified location

	eXS_ERRORCODE_CALFILE_LOADFAILED,			// calibration file failed to load - likely the file wasn't found
	eXS_ERRORCODE_CALFILE_DOESNOTMATCHSENSOR,	// the calibration file does not match the sensor

	eXS_ERRORCODE_CONFIGURATION_NOTCOMPLETE,	// Call XS_ConfigComplete() to complete the sensor configuration.
	eXS_ERRORCODE_CONFIGURATION_NOSENSORS,		// no sensors have been added to the sample config via XS_AddSensorToConfig(), or could not be added
	eXS_ERRORCODE_CONFIGURATION_FAILCREATEXSN,	// Could not create the XSN file. Check that the path is valid and the location can be written too.
	eXS_ERRORCODE_AUTOCONFIG_SENSORNOTFOUND,	// no sensors found during enumeration - please check XS_GetLastEnumState()

	eXS_ERRORCODE_SENSORS_SENSORNOTFOUND,		// either the sensor isn't enumerated, or the PID is invalid
	eXS_ERRORCODE_SENSORS_RAWONLY,				// XS_GetPressure() called, but no calibration files have been loaded.  Only raw data is available.
	eXS_ERRORCODE_SENSORS_NOSAMPLE,				// XS_Sample() has not been called yet, or it has not succeeded in retrieving a sample

	eXS_ERRORCODE_SENSORS_CONNECTIONLOST,		// XS_Sample failed because a sensor was disconnected or USB power reset
	eXS_ERRORCODE_SENSORS_SAMPLETIMEOUT,		// XS_Sample failed because the sensor timed out while reading
	eXS_ERRORCODE_SENSORS_SAMPLEFAILED,			// XS_Sample failed for reasons unknown

	eXS_ERRORCODE_SENSORS_NOCONNECTION,			// Calling XS_Sample() without first calling to XS_OpenConnection()?
	eXS_ERRORCODE_SENSORS_CONNECTFAILED,		// It's possible that one of the sensors has become disconnected.  Check connections.
	eXS_ERRORCODE_SENSORS_COMMANDFAILED,		// The sensor did not respond properly to the command. Check connections or try the call again.

	eXS_ERRORCODE_MEMORYALLOCATION_FAILED,		// the system seems to be running low on memory, or the DLL could not allocate some memory
	eXS_ERRORCODE_COULDNOTCREATECAPTUREFILE,	// Could not create the target capture file

	eXS_ERRORCODE_SIMFILE_LOADFAIL,				// A problem occured while loading the simulation file.  The path might be incorrect, or the file cannot be opened.  (Try loading it in the XSENSOR desktop software.)
	eXS_ERRORCODE_SIM_FUNCTION_NA,				// The DLL function is not available or does nothing while in simulation mode.
	eXS_ERRORCODE_SIM_CALIBRATED_ONLY,			// The simulation only supports calibrated (pressure) data
	eXS_ERRORCODE_SIM_RAW_ONLY,					// The simulation only supports raw (non-pressure) data

	eXS_ERRORCODE_MANCAL_FUNCTION_NOTSET,		// The manaul calibration state is not set, which this function requires.
	eXS_ERRORCODE_MANCAL_FUNCTION_NA,			// The DLL function is not available or does nothing while in manual calibration mode.
	eXS_ERRORCODE_CALIBRATION_AUTOCACHE,		// This calibration function is disabled while the calibration auto-cache is enabled via XS_SetCalibrationFolder.

	eXS_ERRORCODE_X4CONFIGSCRIPT_COULDNOTOPEN,	// The X4 config script could not be opened. Perhaps a bad file path? Or the sensor is not an X4!
	eXS_ERRORCODE_X4CONFIGSCRIPT_BADRESPONSE,	// A command in the X4 config script returned a bad response

	eXS_ERRORCODE_X4SPKNOTCOMPATIBLEWITHCALFILE, // the selected X4 SPK is not compatible with the sensor's calibration file

	eXS_ERRORCODE_FAIL_X4REMOTE_ACTIVE,			// This local command failed because an X4REMOTE connection is active.
	eX4_ERRORCODE_FAIL_LOCAL_ACTIVE,			// This remote command failed because a session is open via XS_OpenConnection. X4 Remote connections are not compatible with this mode.
	eX4_ERRORCODE_DOWNLOAD_INTERRUPTED,			// The command was interrupted in the middle of downloading some state. Check connection and try again.
	eX4_ERRORCODE_UPLOAD_INTERRUPTED,			// The command was interrupted in the middle of uploading some state. Check connection and try again.

	eX4_ERRORCODE_SESSIONINDEX_OUTOFBOUNDS,		// the session file index is too large for the list.
	eX4_ERRORCODE_RECORDINGINPROGRESS,			// The command failed because the X4 is in the middle of a remote recording.
	eX4_ERRORCODE_REMOTENOTOPEN,				// the remote connection is not open. This command requires an open connection

	eX4_ERRORCODE_REMOTERECORD_STARTFAIL,		// the remote recording failed to start ... check connections
};
// this is a bit mask - any number of these bits might be set
enum EEnumerationError
{
	eENUMERROR_OK						= 0x00000000,	// no errors detected

	eENUMERROR_NOSPKSDETECTED			= 0x00000001,	// no SPKS appear in the computer
	eENUMERROR_OPENDEVICEFAIL			= 0x00000002,	// The SPK could not be opened with CreateFile
	eENUMERROR_OPENDEVICEFAIL_PROCESSLOCK= 0x00000004,	// The SPK could not be opened because some other process has it opened
	eENUMERROR_HIDDEVICEENUMFAIL		= 0x00000008,	// The HID device enumerate failed - very low level

	eENUMERROR_MISSINGCON				= 0x00000010,	// The SPK is not connected to a sensor pad
	eENUMERROR_MISSINGDLLCODE			= 0x00000020,	// The sensor does not have a DLL code
	eENUMERROR_MISMATCHEDDLLCODE		= 0x00000040,	// The sensor's DLL code does not match this DLL
	eENUMERROR_MISSINGPROFILE			= 0x00000080,	// The sensors profile is not supported by this DLL

	eENUMERROR_MISSINGCHILDSPKS			= 0x00000100,	// This multi-SPK sensor is missing SPKS ports 2 to N
	eENUMERROR_MISSINGPARENTSPK			= 0x00000200,	// This multi-SPK sensor is missing SPK on port 1
	eENUMERROR_MISMATCHEEDFIRMWARE		= 0x00000400,	// This multi-SPK sensor must the same firmware on each SPK
	eENUMERROR_MISMATCHEDSPKTYPES		= 0x00000800,	// This multi-SPK sensor must the same SPK types on each port (either XS PRO, or just XS)

	eENUMERROR_CONNECTIONSENSE			= 0x00001000,	// This sensor pad is not properly plugged into the SPK - or there is a hardware problem with the sensor
	eENUMERROR_CONREQUIRESNEWERFIRMWARE	= 0x00002000,	// The sensor pad requires SPK(s) with firmware 1.3 or better
	eENUMERROR_MIXEDHSSX3				= 0x00004000,	// Mixed X3 and HSS components (either HSS sensor on X3, or X3 sensor on HSS)
	eENUMERROR_SENSORLOCK				= 0x00008000,	// The sensor is locked (likely due to time trial expiry)

	// the rest of the bits are reserved
};
// ===========================================================================
//	Library initialization/deinitialization
// ===========================================================================

extern "C" XSCORE_API EXSErrorCodes XS_GetLastErrorCode();
// Returns the last error codes in the form of an ASCII English string.

extern "C" XSCORE_API XBOOL XS_InitLibrary(XBOOL bThreadMode);
// Initialize the XS software engine. This must be the first call to the XS Library.
// When bThreadMode is xTRUE, the DLL samples independently of any calls to XS_Sample.
// When bThreadMode is xFALSE, the DLL waits for each XS_Sample call to fetch a new sample.
//
// Returns xTRUE if the call succeeded.

extern "C" XSCORE_API XBOOL XS_ExitLibrary();
// Uninitializes the XS software engine. Frees all allocated resources.  This should be the last call to the XS Library.

extern "C" XSCORE_API XBOOL XS_GetVersion(uint16_t& major, uint16_t& minor, uint16_t& build, uint16_t& revision);
// Fetch the DLL version - major.minor.build.revision.
//
// Returns xTRUE if the call succeeded.

// ===========================================================================
//	Sensor Enumeration
// ===========================================================================

extern "C" XSCORE_API uint32_t XS_EnumSensors();
// XS_EnumSensors normally interrupts remote recording sessions for X4 sensors.
// This is required to query the X4 sensor for its information. Remote session recordings
// prevent this information from being retrieved.
// 
// Set this to xFALSE to prevent XS_EnumSensors from interrupting any active remote recordings.

extern "C" XSCORE_API void XS_SetAllowFastEnum(XBOOL bAllow);
extern "C" XSCORE_API XBOOL XS_GetAllowFastEnum();
// When this flag is enabled, the DLL skips looking for new sensors and only attempts to talk 
// to sensors it already knows about. Temporarily enable this flag this when scanning for a known sensor
// whose connection was lost. This avoids the expense of looking for new sensors.


extern "C" XSCORE_API EEnumerationError XS_GetLastEnumState();
// Retrieves an internal English string describing the errors.

extern "C" XSCORE_API uint32_t XS_EnumSensorCount();
// Returns a count of the number of sensors found during the XS_EnumSensors() call.

extern "C" XSCORE_API SENSORPID XS_EnumSensorPID(uint32_t nEnumIndex);
// Returns a sensor's 64-bit product ID at the indexed (0-index) location of the enumerated sensors list.
// If the return value is 0, the function call failed. Failure is typically caused by an index that is out of bounds.


// ===========================================================================
//	Sensor Details
// ===========================================================================

extern "C" XSCORE_API uint16_t XS_GetSerialFromPID(SENSORPID spid);
// Returns a sensor's 4 digit serial number (ie: 0014)

extern "C" XSCORE_API XBOOL XS_GetSensorDimensions(SENSORPID spid, uint16_t& nRows, uint16_t& nColumns);
// Fetch the number of rows and columns defining the sensor grid.
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_GetSensorName(SENSORPID spid, uint32_t& charCount, wchar_t* pBuffer = NULL);
// Returns xTRUE if this an X4 sensor.
// Sets bFootSensor to xTRUE if the sensor is an X4 foot sensor. 
// Sets bLeftFoot to xTRUE if it's a left foot sensor, and xFALSE for right foot sensors.


// ===========================================================================
//	Calibration Management
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_SetCalibrationFolder(const wchar_t* szCalibrationFolder);
// Similar to XS_NewSensorConfig(), but also creates a standalone XSN session file.
// The szXSNFile file path must be fully specified. eg: "c:\MySessions\Test.xsn".
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_AddSensorToConfig(SENSORPID spid, const wchar_t* szCalibrationFile);
// Similar to XS_AddSensorToConfig_AutoCal(), but attempts to use the default pressure range for the sensor.
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_ConfigComplete();
// Get the number of per-sensel readings that are averaged together per sensel scan.


// ===========================================================================
//	Connection Management
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_OpenConnection(uint32_t nThreadedFramesPerMinute=0);
// Returns the threshold below which pressure is zeroed.
// If -1.0 is returned, this indicates the function failed. Check XS_GetLastErrorCode.

extern "C" XSCORE_API XBOOL XS_Sample();
// Fetch the timestamp of the last sample collected.
// Includes microseconds when supported by the sensor hardware.
// This version allows conversion of the timestamp to the local time zone.


extern "C" XSCORE_API XBOOL XS_GetPressure(SENSORPID spid, float* pData);