XSensor/ToS/XSCore90.py

# ===========================================================================
# Python 3.6 wrapper for the XSCore90 DLL
# Implemented as per https:#docs.python.org/3/library/ctypes.html
#
# Copyright (C) 2010-2022  XSENSOR Technology Corporation. All rights reserved.
# ===========================================================================

import ctypes
from enum import Enum

class EXSErrorCodes(Enum):
	eXS_ERRORCODE_OK							= 0	# Function ran normally
	eXS_ERRORCODE_BADPARAMETER_OUTOFRANGE		= 1 # a parameter is out of range
	eXS_ERRORCODE_BADPARAMETER_NULL				= 2 # null parameter - pass in a variable/buffers address
	eXS_ERRORCODE_BADPARAMETER_INVALID_SENSOR_PID = 3 # either the PID is bad or the sensor was not configured
	eXS_ERRORCODE_CALFILE_LOADFAILED			= 4 # calibration file failed to load - likely the file wasn't found
	eXS_ERRORCODE_CALFILE_DOESNOTMATCHSENSOR	= 5 # the calibration file does not match the sensor
	eXS_ERRORCODE_CONFIGURATION_NOTCOMPLETE		= 6 # Call XS_ConfigComplete() to complete the sensor configuration.
	eXS_ERRORCODE_CONFIGURATION_NOSENSORS		= 7 # no sensors have been added to the sample config via XS_AddSensorToConfig() or could not be added
	eXS_ERRORCODE_CONFIGURATION_FAILCREATEXSN   = 8 # Could not create the XSN file. Check that the path is valid and the location can be written too.
	eXS_ERRORCODE_SENSORS_SENSORNOTFOUND		= 9 # either the sensor isn't enumerated or the PID is invalid
	eXS_ERRORCODE_SENSORS_RAWONLY				= 10 # XS_GetPressure() called but no calibration files have been loaded.  Only raw data is available.
	eXS_ERRORCODE_SENSORS_NOSAMPLE				= 11 # XS_Sample() has not been called yet or it has not succeeded in retrieving a sample
	eXS_ERRORCODE_SENSORS_CONNECTIONLOST		= 12 # XS_Sample failed because a sensor was disconnected or USB power reset
	eXS_ERRORCODE_SENSORS_SAMPLETIMEOUT			= 13 # XS_Sample failed because the sensor timed out while reading
	eXS_ERRORCODE_SENSORS_SAMPLEFAILED			= 14 # XS_Sample failed for reasons unknown
	eXS_ERRORCODE_SENSORS_NOCONNECTION			= 15 # Calling XS_Sample() without first calling to XS_OpenConnection()?
	eXS_ERRORCODE_SENSORS_CONNECTFAILED			= 16 # It's possible that one of the sensors has become disconnected.  Check connections.
	eXS_ERRORCODE_MEMORYALLOCATION_FAILED		= 17 # the system seems to be running low on memory or the DLL could not allocate some memory
	eXS_ERRORCODE_LIBRARY_NOT_INITIALIZED		= 18 # The DLL library has not been initialized
	eXS_ERRORCODE_AUTOCONFIG_SENSORNOTFOUND		= 19 # no sensors found during enumeration - please check XS_GetLastEnumState()
	eXS_ERRORCODE_COULDNOTCREATECAPTUREFILE		= 20 # Could not create the target capture file
	eXS_ERRORCODE_SIMFILE_LOADFAIL				= 21 # A problem occured while loading the simulation file.  The path might be incorrect or the file cannot be opened.  (Try loading it in the XSENSOR desktop software.)
	eXS_ERRORCODE_SIM_FUNCTION_NA				= 22 # The DLL function is not available or does nothing while in simulation mode.
	eXS_ERRORCODE_SIM_CALIBRATED_ONLY			= 23 # The simulation only supports calibrated (pressure) data
	eXS_ERRORCODE_SIM_RAW_ONLY					= 24 # The simulation only supports raw (non-pressure) data
	eXS_ERRORCODE_MANCAL_FUNCTION_NOTSET		= 25 # The manaul calibration state is not set which this function requires.
	eXS_ERRORCODE_MANCAL_FUNCTION_NA			= 26 # The DLL function is not available or does nothing while in manual calibration mode.
	eXS_ERRORCODE_CALIBRATION_AUTOCACHE			= 27 # This calibration function is disabled while the calibration auto-cache is enabled via XS_SetCalibrationFolder.
	eXS_ERRORCODE_X4CONFIGSCRIPT_COULDNOTOPEN	= 28 # The X4 config script could not be opened. Perhaps a bad file path? Or the sensor is not an X4!
	eXS_ERRORCODE_X4CONFIGSCRIPT_BADRESPONSE	= 29 # A command in the X4 config script returned a bad response


# this is a bit mask - any number of these bits might be set
class EEnumerationState(Enum):
	eENUMSTATE_OK						= 0x00000000	# no errors detected
	eENUMSTATE_NOSPKSDETECTED			= 0x00000001	# no SPKS appear in the computer
	eENUMSTATE_OPENDEVICEFAIL			= 0x00000002	# The SPK could not be opened with CreateFile
	eENUMSTATE_OPENDEVICEFAIL_PROCESSLOCK = 0x00000004	# The SPK could not be opened because some other process has it opened
	eENUMSTATE_HIDDEVICEENUMFAIL		= 0x00000008	# The HID device enumerate failed - very low level
	eENUMSTATE_MISSINGCON				= 0x00000010	# The SPK is not connected to a sensor pad
	eENUMSTATE_MISSINGDLLCODE			= 0x00000020	# The sensor does not have a DLL code
	eENUMSTATE_MISMATCHEDDLLCODE		= 0x00000040	# The sensor's DLL code does not match this DLL
	eENUMSTATE_MISSINGPROFILE			= 0x00000080	# The sensors profile is not supported by this DLL
	eENUMSTATE_MISSINGCHILDSPKS			= 0x00000100	# This multi-SPK sensor is missing SPKS ports 2 to N
	eENUMSTATE_MISSINGPARENTSPK			= 0x00000200	# This multi-SPK sensor is missing SPK on port 1
	eENUMSTATE_MISMATCHEEDFIRMWARE		= 0x00000400	# This multi-SPK sensor must the same firmware on each SPK
	eENUMSTATE_MISMATCHEDSPKTYPES		= 0x00000800	# This multi-SPK sensor must the same SPK types on each port (either XS PRO or just XS)
	eENUMSTATE_CONNECTIONSENSE			= 0x00001000	# This sensor pad is not properly plugged into the SPK - or there is a hardware problem with the sensor
	eENUMSTATE_CONREQUIRESNEWERFIRMWARE	= 0x00002000	# The sensor pad requires SPK(s) with firmware 1.3 or better
	eENUMSTATE_MIXEDHSSX3				= 0x00004000,	# Mixed X3 and HSS components (either HSS sensor on X3, or X3 sensor on HSS)
	eENUMSTATE_SENSORLOCK				= 0x00008000,	# The sensor is locked (likely due to time trial expiry)

class EPressureUnit(Enum):
	ePRESUNIT_MMHG	= 0	# millimeters of mercury
	ePRESUNIT_INH2O = 1	# inches of water
	ePRESUNIT_PSI	= 2	# pounds/sq.inch
	ePRESUNIT_KPA	= 3	# kilopascals
	ePRESUNIT_KGCM2	= 4	# kgf/cm^2
	ePRESUNIT_ATM	= 5	# atmospheres
	ePRESUNIT_NCM2	= 6	# newtons/cm^2
	ePRESUNIT_MBAR	= 7	# millibars
	ePRESUNIT_NM2	= 8	# Newton/meter^2
	ePRESUNIT_GCM2	= 9	# grams/cm^2
	ePRESUNIT_RAW 	= 255 # non-calibrated readings from the sensors - 16 bit integers

# ===========================================================================
# load the library. Change the path if you want to put it in another folder.
#
# programmer note: You will probably have to supply the full path to the DLL.
# ===========================================================================

# import the 64 bit dll
# libXSC = ctypes.cdll.LoadLibrary("XSCore90x64.dll")

# import the 32 bit dll
# usage example: libXSC = ctypes.cdll.LoadLibrary("E:\\xsource\\xsensor.libs\\Xsensor.Libraries.X3\\XSCore90\\bin\\Win32\\Debug\\XSCore90.dll")
libXSC = ctypes.cdll.LoadLibrary(r"C:\Users\preco\OneDrive\Desktop\Project-Orchid\XSensor\ToS\XSCore90x64.dll")

# ===========================================================================
#	Library initialization/deinitialization
# ===========================================================================

# Retrieves the last error code.  Check this value when a function reports a failure.  (see enum EXSErrorCodes below).
XS_GetLastErrorCode = libXSC.XS_GetLastErrorCode
XS_GetLastErrorCode.restype = ctypes.c_uint


# XS_InitLibrary
# Initialize the XS software engine.  This must be the first call to the XS Library
# Use bThreadMode set to TRUE(1) if you want the DLL to sample independently of the call to XS_Sample.
# Otherwise set to FALSE(0) to have finer control over the sample rate.
# XBOOL XS_InitLibrary(XBOOL bThreadMode);
XS_InitLibrary = libXSC.XS_InitLibrary
XS_InitLibrary.argtypes = [ctypes.c_ubyte]
XS_InitLibrary.restype = ctypes.c_ubyte


# XS_ExitLibrary
# Uninitializes the XS software engine, freeing all allocated resources.  This should be the last call to the XS Library
# XBOOL XS_ExitLibrary();
XS_ExitLibrary = libXSC.XS_ExitLibrary
XS_ExitLibrary.restype = ctypes.c_ubyte


# XS_GetVersion
# fetches the DLL version - major.minor.build.revision
# XBOOL XS_GetVersion(uint16_t& major, uint16_t& minor, uint16_t& build, uint16_t& revision);
XS_GetVersion = libXSC.XS_GetVersion
XS_GetVersion.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_void_p]
XS_GetVersion.restype = ctypes.c_ubyte


# ===========================================================================
#	Sensor Enumeration and Information
# ===========================================================================

# XS_EnumSensors
# Enumerates the internal sensor lists.  Scans the USB bus for available sensors.  Returns the number found.
# This function can be called multiple times to refresh the sensor list.
# FYI, this list depends on how fast the computer enumerates devices on the USB bus.
# When you first plug in a sensor, it might take 5 to 10 seconds for it to appear.
# uint32_t XS_EnumSensors();
XS_EnumSensors = libXSC.XS_EnumSensors
XS_EnumSensors.restype = ctypes.c_uint


# When enabled, the DLL skips looking for new sensors and only attempts to talk to sensors it already knows about.
# Use this when you've found a sensor, but lost its connection and want to rescan for it without the delay of looking
# for new sensors.
# void XS_SetAllowFastEnum(XBOOL bAllow);
XS_SetAllowFastEnum = libXSC.XS_SetAllowFastEnum
XS_SetAllowFastEnum.argtypes = [ctypes.c_ubyte]

# XBOOL XS_GetAllowFastEnum();
XS_GetAllowFastEnum = libXSC.XS_GetAllowFastEnum
XS_GetAllowFastEnum.restype = ctypes.c_uint

# XS_GetLastEnumState
# Retrieves the enumeration error state.  This value is only valid after a call to XS_EnumSensors
# uint32_t XS_GetLastEnumState();
XS_GetLastEnumState = libXSC.XS_GetLastEnumState
XS_GetLastEnumState.restype = ctypes.c_uint


# XS_EnumSensorCount
# Returns a count of the number of sensors found during the EnumSensors() call.
# uint32_t XS_EnumSensorCount();
XS_EnumSensorCount = libXSC.XS_EnumSensorCount
XS_EnumSensorCount.restype = ctypes.c_uint

# XS_EnumSensorPID
# Returns the sensor PRODUCT ID at the indexed location of the enumerated sensors list.  The index is zero based.
# SENSORPID XS_EnumSensorPID(uint32_t nEnumIndex);
XS_EnumSensorPID = libXSC.XS_EnumSensorPID
XS_EnumSensorPID.argtypes = [ctypes.c_uint]
XS_EnumSensorPID.restype = ctypes.c_ulonglong


# XS_GetSerialFromPID
# Retrieve a sensor's 4 digit serial number.
# uint16_t XS_GetSerialFromPID(SENSORPID spid);
XS_GetSerialFromPID = libXSC.XS_GetSerialFromPID
XS_GetSerialFromPID.argtypes = [ctypes.c_ulonglong]
XS_GetSerialFromPID.restype = ctypes.c_ushort


# XS_GetSensorDimensions
# Retrieves the sensor's row and column counts
# XBOOL XS_GetSensorDimensions(SENSORPID spid, uint16_t& nRows, uint16_t& nColumns)
XS_GetSensorDimensions = libXSC.XS_GetSensorDimensions
XS_GetSensorDimensions.argtypes = [ctypes.c_ulonglong, ctypes.c_void_p, ctypes.c_void_p]
XS_GetSensorDimensions.restype = ctypes.c_ubyte

# XS_GetSensorName
# Returns the display name of the sensor. Example: HX210.11.31.M9-LF S0002
# The string is made of 16 bit wchar_t characters (UTF-16/UCS-2) which is null terminated.
# If pBuffer is 0 or NULL, the length of the required buffer (in wchar_t count) is calculated
# and returned in bufferSize.
# If pBuffer is not null, then bufferSize should be the length of the buffer in wchar_t.
#
# XBOOL XS_GetSensorName(SENSORPID spid, uint32_t& bufferSize, wchar_t* pBuffer = NULL);
XS_GetSensorName = libXSC.XS_GetSensorName
XS_GetSensorName.argtypes = [ctypes.c_ulonglong, ctypes.c_void_p, ctypes.c_void_p]
XS_GetSensorName.restype = ctypes.c_ubyte
